# OpenPGP-Crypto

./: Makefile  README  openpgp-Crypto.cabal
Data/OpenPGP/: Crypto.hs
debian/: changelog  control  rules
examples/: keygen.hs  sign.hs  verify.hs
tests/: suite.hs
