name:            openpgp-Crypto
version:         0.5.0.1
cabal-version:   >= 1.10
license:         OtherLicense
license-file:    COPYING
category:        Cryptography
copyright:       © 2011-2012 Stephen Paul Weber
author:          Stephen Paul Weber <singpolyma@singpolyma.net>
maintainer:      Stephen Paul Weber <singpolyma@singpolyma.net>
stability:       experimental
tested-with:     GHC == 7.0.3
synopsis:        Implementation of cryptography for use with OpenPGP using the Crypto library
homepage:        http://github.com/singpolyma/OpenPGP-Crypto
bug-reports:     http://github.com/singpolyma/OpenPGP-Haskell/issues
build-type:      Simple
description:
        This is a wrapper around <http://hackage.haskell.org/package/Crypto>
        that currently does fingerprint generation, signature generation, and
        signature verification (for RSA keys only).
        .
        It is indended to be used with <http://hackage.haskell.org/package/openpgp>
        .
        It is intended that you use qualified imports with this library.
        .
        > import qualified Data.OpenPGP.Crypto as OpenPGP

extra-source-files:
        README,
        tests/suite.hs,
        tests/data/000001-006.public_key,
        tests/data/000016-006.public_key,
        tests/data/000027-006.public_key,
        tests/data/000035-006.public_key,
        tests/data/uncompressed-ops-dsa.gpg
        tests/data/uncompressed-ops-dsa-sha384.txt.gpg
        tests/data/uncompressed-ops-rsa.gpg
        tests/data/compressedsig.gpg
        tests/data/compressedsig-zlib.gpg
        tests/data/compressedsig-bzip2.gpg

library
        default-language: Haskell2010
        exposed-modules:
                Data.OpenPGP.Crypto

        build-depends:
                base        == 4.*,
                bytestring  >= 0.9 && < 0.11,
                utf8-string >= 1 && < 1.1,
                binary      < 0.9,
                openpgp     == 0.6.*,
                Crypto      >= 4.2.5.1 && < 4.3

test-suite tests
        default-language: Haskell2010
        type:       exitcode-stdio-1.0
        main-is:    suite.hs
        hs-source-dirs: tests

        build-depends:
                -- internal lib dependency
                openpgp-Crypto,
                -- constraints inherited via lib:openpgp-Crypto component
                base,
                bytestring,
                utf8-string,
                binary,
                openpgp

        build-depends:
                -- deps w/o non-inherited version constraints
                HUnit,
                QuickCheck >= 2.4.1.1,
                test-framework,
                test-framework-hunit,
                test-framework-quickcheck2

source-repository head
        type:     git
        location: git://github.com/singpolyma/OpenPGP-Crypto.git
